# notifications-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: run_unit_tests.yml
app/: main.py
app/application/services/: notification_service.py
app/domain/entities/: notification.py
app/domain/events/: domain_events.py  event_publisher.py
app/domain/exceptions/: exceptions.py
app/domain/handlers/: notification_handlers.py
app/domain/value_objects/: description.py  notification_id.py  topic.py
app/infrastructure/: dependency_injection.py
app/infrastructure/dtos/: dto.py
app/infrastructure/handlers/: email_handler.py  notion_handler.py  retry.py  slack_handler.py
app/infrastructure/instrumentation/: notification_instrumentation.py
app/infrastructure/presenters/: notification_presenter.py
app/infrastructure/routers/: exception_handlers.py  routers.py
app/tests/application/services/: test_notification_service.py
app/tests/domain/entities/: test_notification.py
app/tests/domain/events/: test_domain_events.py  test_event_publisher.py
app/tests/domain/value_objects/: test_description.py  test_notification_id.py  test_topic.py
app/tests/infrastructure/: test_dependency_injection.py
app/tests/infrastructure/handlers/: test_email_handler.py  test_notion_handler.py  test_retry.py  test_slack_handler.py
app/tests/infrastructure/instrumentation/: test_notification_instrumentation.py
app/tests/infrastructure/presenters/: test_notification_presenter.py
app/tests/infrastructure/routers/: test_routers.py
